2002-06-14  Derek Atkins   <derek@ihtfp.com>

	* business-core/gncTaxTable*: Create a preliminary implementation
	of Tax Tables.  They are currently not saved, and nothing uses
	them.  Link the initialization into the module.

	* business-gnome/dialog-tax-table*: Create a tax table GUI to
	create and edit tax tables.  G-wrap the editor-window create
	routine.

	* business-gnome.scm: add the Tax Table gui; rename the 'Invoice'
	option page to "Business".  Fix dialog-invoice to use the new
	option name.
	
2002-06-11  David Hampton  <hampton@employees.org>

	* src/gnome/druid-stock-split.c: Add automatic focusing on a
	couple of the druid pages.

	* src/gnome/window-acct-tree.c: Fix a compile of broken menu
	items.  Only enable the reconcile menu item when an account has
	been selected.

2002-06-10  David Hampton  <hampton@employees.org>

	* src/gnome/window-main.c: Update the view items to use
	gtkcheckmenuitems instead of having separate show and hide menu
	items.  Also flip the order of the Summary and Status menu items
	so that the menu order reflects the items order within the window.

2002-06-09  David Hampton  <hampton@employees.org>

	* src/gnome/window-acct-tree.c: Remove the 'tax information' item
	from the account window pop-up menu.

	* src/gnome/glade/price.glade:
	* src/gnome/dialog-price-editor.c: Set up all fields so that the
	Enter key triggers the OK button.

	* src/gnome/glade/price.glade:
	* src/gnome/dialog-price-edit-db.c: Sort the database by clicking
	on the column titles.  Removed old radio-buttons for sorting.  A
	double-click on an item will also open it for editing.

2002-06-08  David Hampton  <hampton@employees.org>

	* src/app-file/gnome/gnc-file-history.c (gnc_history_update_menu):
	Move the file history items into a sub-menu of the file menu.

	* src/gnome/window-acct-tree.c: Menu/toolbar items are now
	enabled/disabled depending upon whether or not an account is
	selected.  Integrated the account specific menu into the main