@@ -1,0 +1,12 @@
+/*
+ * gnc-tax-table-xml-v2.h -- tax table xml i/o parser/unparsers
+ *
+ * Copyright (C) 2000 Derek Atkins <warlord@MIT.EDU>
+ */
+
+#ifndef GNC_TAXTABLE_XML_V2_H
+#define GNC_TAXTABLE_XML_V2_H
+
+void gnc_taxtable_xml_initialize (void);
+
+#endif /* GNC_TAXTABLE_XML_V2_H */
